--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ permalink: /
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-            <h3 class="section-heading">Sign in with your {{ site.longname }} account</h3>
+            <h3 class="section-heading">Sign in with your account</h3>
         </div>
         <div style="margin-top:40px"></div>
       </div>
