Publishing to template (ansible.sh)

--- a/logout/index.html
+++ b/logout/index.html
@@ -58,7 +58,7 @@
                   <a class="" href="mailto:{{ callysto_html_support_email }}">Support <i class="fa fa-envelope"></i></a>
                 </li>
                 <li>
-                  <a class="" href="http://callysto.ca">callysto.ca <i class="fa fa-external-link"></i></a>
+                  <a class="" href="#">CARES <i class="fa fa-external-link"></i></a>
                 </li>
                 <li>
                     <a class="" href="http://intro.syzygy.ca">Tutorial</a>
@@ -114,7 +114,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Brought to Canada's Research Community by</h2>
+                <h2 class="section-heading">Brought to Canada's Startup Community by</h2>
                 <hr class="primary">
             </div>
         </div>
@@ -129,23 +129,14 @@
             </div>
             <div class="col-lg-4 col-md-4 text-center">
                 <div class="partners-box">
-                    <a href="http://www.pims.math.ca/" target="_blank" >
-                    <img src="/img/portfolio/PIMS-circle-with-wordmark-CAPS.png" class="wow zoomIn" alt=""></a>
+                    <a href="#" target="_blank" >
+                    <img src="/img/portfolio/goa-logo.svg.png" class="wow zoomIn" alt=""></a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 text-center">
                 <div class="partners-box">
                     <a href="http://jupyter.org/" target="_blank" >
                     <img src="/img/portfolio/jupyter-logo.svg" class="wow zoomIn" alt=""></a>
-                </div>
-            </div>
-        </div>
-        <hr class="primary">
-        <div class="row">
-            <div class="col-lg-4 col-md-4 col-lg-offset-4 text-center">
-                <div class="partners-box">
-                    <a href="https://www.canada.ca/en/innovation-science-economic-development/programs/science-technology-partnerships/cancode.html" target="_blank" >
-                    <img src="/img/portfolio/canada-funding.png" class="wow zoomIn" id="canada-funding" alt=""></a>
                 </div>
             </div>
         </div>
@@ -159,7 +150,7 @@
                 <div class="funding-box">
                 <h2 class="section-heading hidden">About Jupyter</h2>
                 <!-- <hr class="light"> -->
-                <p class="text"><i class="fa fa-info-circle" aria-hidden="true"></i> <a href="https://callysto.ca">Callysto website</a></p>
+                <p class="text"><i class="fa fa-info-circle" aria-hidden="true"></i> <a href="https://cybera.ca">Cybera website</a></p>
                 <p class="text"><i class="fa fa-book" aria-hidden="true"></i> Interactive computing notebooks</p>
                 <p class="text"><i class="fa fa-cloud" aria-hidden="true"></i> Research tools accessed via browser</p>
                 <p class="text"><i class="fa fa-flask" aria-hidden="true"></i> Python 3, R </p>
