--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="callysto.ca -- A CanCode project advancing Math, Science and Coding in Canadian Schools.">
-    <meta name="author" content="James Colliander">
+    <meta name="description" content="Jupyter notebooks provided as part of Cybera's Data Science for Entrepreneurs project">
+    <meta name="author" content="Cybera">
 
     <title>{{ callysto_html_domain }}</title>
 
@@ -58,7 +58,7 @@
                   <a class="" href="mailto:{{ callysto_html_support_email }}">Support <i class="fa fa-envelope"></i></a>
                 </li>
                 <li>
-                  <a class="" href="#">CARES <i class="fa fa-external-link"></i></a>
+                  <a class="" href="http://www.cybera.ca/services/data-science/data-science-for-entrepreneurs/">Data Science for Entrepreneurs <i class="fa fa-external-link"></i></a>
                 </li>
                 <li>
                     <a class="" href="http://intro.syzygy.ca">Tutorial</a>
@@ -82,9 +82,9 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <a href="{{ callysto_html_url }}/jupyter/hub" target="_blank" >
-          <img src="/img/portfolio/jupyter-logo.png" class="wow zoomIn" id="callysto" alt="">
-        </a>
+        <h2>Welcome to the Data Science for Entrepreneurs JupyterHub</h2>
+        <br><br>
+        <p>Cybera’s Data Science for Entrepreneurs project provides Alberta entrepreneurs, businesses and social enterprises with training and access to data science expertise. This Jupyter notebook portal (JupyterHub) provides you with free access to work on data science projects and increases easy collaboration across your organization.</p>
        </div>
     </div>
   </div>
@@ -121,7 +121,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Brought to Canada's Startup Community by</h2>
+                <h2 class="section-heading">This project is brought to you with support from</h2>
                 <hr class="primary">
             </div>
         </div>
@@ -136,7 +136,7 @@
             </div>
             <div class="col-lg-4 col-md-4 text-center">
                 <div class="partners-box">
-                    <a href="#" target="_blank" >
+                    <a href="http://economic.alberta.ca/" target="_blank" >
                     <img src="/img/portfolio/goa-logo.svg.png" class="wow zoomIn" alt=""></a>
                 </div>
             </div>
@@ -176,20 +176,25 @@
     </div>
 </section>
 
-        <section class="primary" id="languages">   
+        <section class="primary" id="languages">
     <div class="container">
         <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+              <p>This platform runs on the following data science languages.</p>
+            </div>
             <div class="col-lg-6 col-md-6 text-center">
                 <div class="partners-box">
                     <a href="https://www.python.org/" target="_blank" >
                     <img src="/img/portfolio/python-logo.png" class="wow zoomIn" alt=""></a>
                 </div>
+                Python
             </div>
             <div class="col-lg-6 col-md-6 text-center">
                 <div class="partners-box">
                     <a href="https://www.r-project.org/" target="_blank" >
                     <img src="/img/portfolio/r-logo.svg" class="wow zoomIn" alt=""></a>
                 </div>
+                R
             </div>
         </div>
     </div>
