--- a/logout/index.html
+++ b/logout/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="callysto.ca -- A CanCode project advancing Math, Science and Coding in Canadian Schools.">
-    <meta name="author" content="James Colliander">
+    <meta name="description" content="Jupyter notebooks provided as part of Cybera's Data Science for Entrepreneurs project">
+    <meta name="author" content="Cybera">
 
     <title>{{ callysto_html_domain }}</title>
 
@@ -58,7 +58,7 @@
                   <a class="" href="mailto:{{ callysto_html_support_email }}">Support <i class="fa fa-envelope"></i></a>
                 </li>
                 <li>
-                  <a class="" href="#">CARES <i class="fa fa-external-link"></i></a>
+                  <a class="" href="http://www.cybera.ca/services/data-science/data-science-for-entrepreneurs/">Data Science for Entrepreneurs <i class="fa fa-external-link"></i></a>
                 </li>
                 <li>
                     <a class="" href="http://intro.syzygy.ca">Tutorial</a>
@@ -114,7 +114,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Brought to Canada's Startup Community by</h2>
+                <h2 class="section-heading">This project is brought to you with support from</h2>
                 <hr class="primary">
             </div>
         </div>
@@ -129,7 +129,7 @@
             </div>
             <div class="col-lg-4 col-md-4 text-center">
                 <div class="partners-box">
-                    <a href="#" target="_blank" >
+                    <a href="http://economic.alberta.ca/" target="_blank" >
                     <img src="/img/portfolio/goa-logo.svg.png" class="wow zoomIn" alt=""></a>
                 </div>
             </div>
@@ -169,20 +169,25 @@
     </div>
 </section>
 
-        <section class="primary" id="languages">   
+        <section class="primary" id="languages">
     <div class="container">
         <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+              <p>This platform runs on the following data science languages.</p>
+            </div>
             <div class="col-lg-6 col-md-6 text-center">
                 <div class="partners-box">
                     <a href="https://www.python.org/" target="_blank" >
                     <img src="/img/portfolio/python-logo.png" class="wow zoomIn" alt=""></a>
                 </div>
+                Python
             </div>
             <div class="col-lg-6 col-md-6 text-center">
                 <div class="partners-box">
                     <a href="https://www.r-project.org/" target="_blank" >
                     <img src="/img/portfolio/r-logo.svg" class="wow zoomIn" alt=""></a>
                 </div>
+                R
             </div>
         </div>
     </div>
