--- a/logout/index.html
+++ b/logout/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Jupyter notebooks provided as part of Cybera's Data Science for Entrepreneurs project">
+    <meta name="description" content="Welcome to Cybera's Data Science for Entrepreneurs JupyterHub environment!">
     <meta name="author" content="Cybera">
 
     <title>{{ callysto_html_domain }}</title>
