--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                   <a class="" href="mailto:{{ callysto_html_support_email }}">Support <i class="fa fa-envelope"></i></a>
                 </li>
                 <li>
-                  <a class="" href="http://www.cybera.ca/services/data-science/data-science-for-entrepreneurs/">Data Science for Entrepreneurs <i class="fa fa-external-link"></i></a>
+                  <a class="" href="https://amii.ca">Amii<i class="fa fa-external-link"></i></a>
                 </li>
                 <li>
                     <a class="" href="http://intro.syzygy.ca">Tutorial</a>
@@ -82,9 +82,9 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <h2>Welcome to the Data Science for Entrepreneurs JupyterHub</h2>
+        <h2>Welcome to the Amii JupyterHub</h2>
         <br><br>
-        <p>Cybera’s Data Science for Entrepreneurs project provides Alberta entrepreneurs, businesses and social enterprises with training and access to data science expertise. This Jupyter notebook portal (JupyterHub) provides you with free access to work on data science projects and increases easy collaboration across your organization.</p>
+        <p>Add a description...</p>
        </div>
     </div>
   </div>
