Publishing to template (ansible.sh)

--- a/logout/index.html
+++ b/logout/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Welcome to Cybera's Data Science for Entrepreneurs JupyterHub environment!">
-    <meta name="author" content="Cybera">
+    <meta name="description" content="Welcome to Amii's JupyterHub environment!">
+    <meta name="author" content="Amii">
 
     <title>{{ callysto_html_domain }}</title>
 
@@ -130,7 +130,7 @@
             <div class="col-lg-4 col-md-4 text-center">
                 <div class="partners-box">
                     <a href="https://amii.ca" target="_blank" >
-                    <img src="/img/portfolio/Amii-colour-logo.png" class="wow zoomIn" alt=""></a>
+                    <img src="/img/portfolio/Amii-colour-logo.png" class="wow zoomIn" alt="amii"></a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 text-center">
@@ -150,7 +150,7 @@
                 <div class="funding-box">
                 <h2 class="section-heading hidden">About Jupyter</h2>
                 <!-- <hr class="light"> -->
-                <p class="text"><i class="fa fa-info-circle" aria-hidden="true"></i> <a href="https://cybera.ca">Cybera website</a></p>
+                <p class="text"><i class="fa fa-info-circle" aria-hidden="true"></i> <a href="https://amii.ca">Amii website</a></p>
                 <p class="text"><i class="fa fa-book" aria-hidden="true"></i> Interactive computing notebooks</p>
                 <p class="text"><i class="fa fa-cloud" aria-hidden="true"></i> Research tools accessed via browser</p>
                 <p class="text"><i class="fa fa-flask" aria-hidden="true"></i> Python 3, R </p>
