Publishing to template (ansible.sh)

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Welcome to Cybera's Data Science for Entrepreneurs JupyterHub environment!">
+    <meta name="description" content="Welcome to Cybera's Data Science for Albertans JupyterHub environment!">
     <meta name="author" content="Cybera">
 
     <title>{{ callysto_html_domain }}</title>
@@ -58,7 +58,7 @@
                   <a class="" href="mailto:{{ callysto_html_support_email }}">Support <i class="fa fa-envelope"></i></a>
                 </li>
                 <li>
-                  <a class="" href="http://www.cybera.ca/services/data-science/data-science-for-entrepreneurs/">Data Science for Entrepreneurs <i class="fa fa-external-link"></i></a>
+                  <a class="" href="https://www.cybera.ca/services/data-science-albertans/">Data Science for Albertans <i class="fa fa-external-link"></i></a>
                 </li>
                 <li>
                     <a class="" href="http://intro.syzygy.ca">Tutorial</a>
@@ -82,9 +82,9 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <h2>Welcome to the Data Science for Entrepreneurs JupyterHub</h2>
+        <h2>Welcome to the Data Science for Albertans JupyterHub</h2>
         <br><br>
-        <p>Cybera’s Data Science for Entrepreneurs project provides Alberta entrepreneurs, businesses and social enterprises with training and access to data science expertise. This Jupyter notebook portal (JupyterHub) provides you with free access to work on data science projects and increases easy collaboration across your organization.</p>
+        <p>Cybera’s Data Science for Albertans project provides Alberta entrepreneurs, businesses and social enterprises with training and access to data science expertise. This Jupyter notebook portal (JupyterHub) provides you with free access to work on data science projects and increases easy collaboration across your organization.</p>
        </div>
     </div>
   </div>
