--- a/logout/index.html
+++ b/logout/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Welcome to Cybera's Data Science for Entrepreneurs JupyterHub environment!">
+    <meta name="description" content="Welcome to Cybera's Data Science for Albertans JupyterHub environment!">
     <meta name="author" content="Cybera">
 
     <title>{{ callysto_html_domain }}</title>
@@ -58,7 +58,7 @@
                   <a class="" href="mailto:{{ callysto_html_support_email }}">Support <i class="fa fa-envelope"></i></a>
                 </li>
                 <li>
-                  <a class="" href="http://www.cybera.ca/services/data-science/data-science-for-entrepreneurs/">Data Science for Entrepreneurs <i class="fa fa-external-link"></i></a>
+                  <a class="" href="https://www.cybera.ca/services/data-science-albertans/">Data Science for Albertans <i class="fa fa-external-link"></i></a>
                 </li>
                 <li>
                     <a class="" href="http://intro.syzygy.ca">Tutorial</a>
