cybera specific updates

--- a/logout/index.html
+++ b/logout/index.html
@@ -58,7 +58,7 @@
                   <a class="" href="mailto:{{ callysto_html_support_email }}">Support <i class="fa fa-envelope"></i></a>
                 </li>
                 <li>
-                  <a class="" href="https://www.cybera.ca/services/data-science-albertans/">Data Science for Albertans <i class="fa fa-external-link"></i></a>
+                  <a class="" href="https://www.cybera.ca/services/data-science-for-albertans/">Data Science for Albertans <i class="fa fa-external-link"></i></a>
                 </li>
                 <li>
                     <a class="" href="http://intro.syzygy.ca">Tutorial</a>
@@ -160,7 +160,7 @@
                 <div class="funding-box">
                 <!-- <h2 class="section-heading">Where? How? Why?</h2> -->
                 <!-- <hr class="light"> -->
-                <p class="text"><i class="fa fa-cogs" aria-hidden="true"></i> Hosted by on Cybera's <a href="https://www.cybera.ca/services/rapid-access-cloud/">Rapid Access Cloud</a></p>
+                <p class="text"><i class="fa fa-cogs" aria-hidden="true"></i> Hosted on Cybera's <a href="https://www.cybera.ca/services/cloud">Rapid Access Cloud</a></p>
                 <p class="text"><i class="fa fa-university" aria-hidden="true"></i> Sign in with your existing credentials</p>
                 <p class="text"><i class="fa fa-users" aria-hidden="true"></i> Built for collaboration</p>
                 </div>
