--- a/logout/index.html
+++ b/logout/index.html
@@ -160,7 +160,7 @@
                 <div class="funding-box">
                 <!-- <h2 class="section-heading">Where? How? Why?</h2> -->
                 <!-- <hr class="light"> -->
-                <p class="text"><i class="fa fa-cogs" aria-hidden="true"></i> Hosted on Cybera's <a href="https://www.cybera.ca/services/cloud">Rapid Access Cloud</a></p>
+                <p class="text"><i class="fa fa-cogs" aria-hidden="true"></i> Hosted on Cybera's <a href="https://www.cybera.ca/services/rapid-access-cloud/">Rapid Access Cloud</a></p>
                 <p class="text"><i class="fa fa-university" aria-hidden="true"></i> Sign in with your existing credentials</p>
                 <p class="text"><i class="fa fa-users" aria-hidden="true"></i> Built for collaboration</p>
                 </div>
